--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>00:00</h1>
   </div>
   <form class="js-form form">
-    <input type="text" placeholder="What is your name?">
+    <input type="text" placeholder="What is your name?" />
   </form>
   <h4 class="js-greetigs greetings"></h4>
 
