--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Clock</title>
   <link rel="stylesheet" href="index.css" />
 </head>
@@ -15,11 +15,14 @@
     <input type="text" placeholder="What is your name?" />
   </form>
   <h4 class="js-greetigs greetings"></h4>
-
-
-
+  <form class="js-toDoForm">
+    <input type="text" placeholder="Write something to do" />
+  </form>
+  <ul class="js-toDoList">
+  </ul>
   <script src="clock.js"> </script>
   <script src="gretting.js"></script>
+  <script src="todo.js"></script>
 
 </body>
 
